--- a/sea_biology/public/index.html
+++ b/sea_biology/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="zh-Hant-TW" class="vh-100">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,13 +11,18 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app">
-
+    <div id="app" class="vh-100">
     </div>
   </body>
 </html>
 
 <style>
+
+
+  .zindex_1 {
+    z-index: 1;
+  }
+
   .zindex_2 {
     z-index: 2;
   }
