[feat] 展館 1. 展館樣式暫定 2. 加上animation.css套件 3. 修改nav動畫延遲時間

--- a/sea_biology/public/index.html
+++ b/sea_biology/public/index.html
@@ -17,7 +17,9 @@
 </html>
 
 <style>
-
+  html, body {
+    font-family: 'Rubik', 'Microsoft JhengHei', Arial;        
+  }
 
   .zindex_1 {
     z-index: 1;
